This version of Antigravity is no longer supported. Please update to receive the latest features!

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
-__pycache__/ 
-*.pyc 
-venv/ 
+# Python
+__pycache__/
+*.py[cod]
+*.so
+.Python
+venv/
+env/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+
+# CPLEX
+*.lp
+*.sol
+*.log
+
+# OS
+.DS_Store
+Thumbs.db
